# envy

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.tape  dist-workspace.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  smoke-test.yml
.specify/extensions/: .registry
.specify/memory/: constitution.md  roadmap.md
docs/: developer-guide.md
specs/001-vault-db-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  status.md  tasks.md
specs/001-vault-db-schema/checklists/: requirements.md
specs/002-crypto-layer/: plan.md  spec.md  tasks.md
specs/003-core-logic/: plan.md  spec.md  tasks.md
specs/004-cli-interface/: plan.md  spec.md  tasks.md
specs/005-gitops-sync-artifact/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/006-cli-sync-commands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-ci-smoke-workflows/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-output-formats/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-multi-env-encrypt/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-status-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-envy-diff/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/012-cli-rotate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-encrypt-strict/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-nested-projects/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/cli/: commands.rs  error.rs  format.rs  mod.rs
src/core/: diff.rs  error.rs  manifest.rs  mod.rs  ops.rs  status.rs  sync.rs
src/crypto/: aead.rs  artifact.rs  diceware.rs  error.rs  keyring.rs  mod.rs
src/db/: environments.rs  error.rs  mod.rs  projects.rs  schema.rs  secrets.rs  sync_markers.rs
tests/: cli_integration.rs  db.rs  e2e_devops_scenarios.sh  sync_artifact.rs
tests/db/: test_environments.rs  test_projects.rs  test_schema.rs  test_secrets.rs  test_security.rs
(+28 files in other folders)
