[package]
name = "envy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A secure, deterministic, and frictionless environment variable manager"
authors = ["Envy Contributors"]
keywords = ["cli", "env", "secrets", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap      = { version = "4", features = ["derive"] }
rusqlite  = { version = "0.31", features = ["bundled-sqlcipher"] }
uuid      = { version = "1", features = ["v4"] }
keyring   = "2"
thiserror = "1"
aes-gcm   = "0.10"
zeroize   = { version = "1", features = ["derive"] }
toml      = "0.8"
serde     = { version = "1", features = ["derive"] }
dirs      = "5"

[dev-dependencies]
tempfile = "3"
