[package]
name = "envy"
version = "0.2.6"
edition = "2024"
rust-version = "1.85"
description = "A secure, deterministic, and frictionless environment variable manager"
authors = ["Anguria Team"]
keywords = ["cli", "env", "secrets", "security"]
categories = ["command-line-utilities", "cryptography"]
license = "MIT"
repository = "https://github.com/anguriatech/envy"
homepage = "https://github.com/anguriatech/envy"

[dependencies]
clap      = { version = "4", features = ["derive"] }
rusqlite  = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid      = { version = "1", features = ["v4"] }
keyring   = "2"
thiserror = "1"
aes-gcm    = "0.10"
zeroize    = { version = "1", features = ["derive"] }
toml       = "0.8"
serde      = { version = "1", features = ["derive"] }
dirs       = "5"
argon2     = "0.5"
serde_json = "1"
base64ct   = { version = "1", features = ["alloc"] }
dialoguer    = "0.11"
rand         = "0.8"
comfy-table     = "7"
clap_complete   = "4"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
